# neurocuber

./: README.md
config/: actor.json  client.json  learn.json  server.json
python/: actor.py  asat.py  client.py  learner.py  mlp.py  neuroquery.py  neurosat.py  replay_buffer.py  server.py  tbwriter.py  tfutil.py  util.py
sat_util/: CMakeLists.txt  except.h  problem.cpp  problem.h  sat_util.cpp  setup.py  solver.cpp  solver.h
sat_util/tests/: test1.dimacs  test_problem.py  test_solver.py
